# lazaro

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  flatpak-dev-preview.yml  flatpak-release.yml  release-flatpak.yml  release-probe.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/ui/: app.js  index.html  overlay.css  overlay.html  overlay.js  styles.css
crates/lazaro-core/: Cargo.toml
crates/lazaro-core/src/: analytics.rs  config.rs  lib.rs  profile.rs  timer.rs
packaging/flatpak/: io.lazaro.Lazaro.desktop  io.lazaro.Lazaro.metainfo.xml  io.lazaro.Lazaro.yml
scripts/: build_flatpak.sh  ci_build_flatpak_release.sh  flatpak_add_remote.sh  install_autostart.sh  install_systemd_user.sh  uninstall_autostart.sh  uninstall_systemd_user.sh
