[package]
name = "lazaro-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "lazaro"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lazaro-core = { path = "../../../crates/lazaro-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
